2003-04-30  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (gd-tip55): Bugfix, location of changeLog was not computed correctly.

	* README-1.4txt: New, overview of changes from 1.3 to 1.4.

	* installed_modules.tcl: Excluded 'calendar' form the list of
	  installed modules/packages. Not yet ready.

	* sak.tcl (ppackages): Rewritten to use a sub-interpreter for
	  retrieving package version information instead of regexes
	  etc.

	  Reverted all changes made to [package provide] commands on
	  2003-04-24, except for minor details, like the actual version
	  numbers and typos.

	 Fixes SF Tcllib FR #727694

2003-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Various fixes to enable document generation under
	Windows.  Gracefully avoid non-present archivers (tar or zip).
	Support for generating a TIP55 style metadata file (gentip55).
	Added a file mtime check to avoid unecessary document generation.

2003-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/base64/yencode.tcl:    Modified the [package provide]'s
	* modules/base64/uuencode.tcl:   of various packages to aid the
	* modules/crc/sum.tcl:           automatic consistency checking at
	* modules/crc/cksum.tcl:         the expense of slightly more
	* modules/crc/crc32.tcl:         manual overhead for updating the
	* modules/crc/crc16.tcl:         numbers.
	* modules/dns/dns.tcl:
	* modules/dns/resolv.tcl:        Additionally cleanup of the found
	* modules/ftp/ftp.tcl:           inconsistencies.
	* modules/ftp/ftp_geturl.tcl:
	* modules/pop3d/pop3d.tcl:
	* modules/pop3d/pop3d_udb.tcl:
	* modules/pop3d/pop3d_dbox.tcl:
	* modules/pop3d/pop3d_dbox.man:
	* modules/smtpd/smtpd.tcl:
	* modules/des/des.tcl:
	* modules/des/des.man:
	* modules/ntp/time.tcl:
	* modules/md4/md4.tcl:

	* sak.tcl: Changed provide heuristics a bit, more robust against
	  whitespace in various places.

2003-04-24  Andreas Kupries  <andreask@activestate.com>
